--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -79,12 +79,11 @@ flutter:
     - family: MainFont
       fonts:
         - asset: assets/fonts/Dosis-Regular.ttf
-        - asset: assets/fonts/Dosis-Medium.ttf
 
-    - family: MainFonts
+    - family: SubFont
       fonts:
-  #      - asset: assets/fonts/Dosis-Regular.ttf
-        - asset: assets/fonts/Dosis-Medium.ttf
+        - asset: assets/fonts/arial.ttf
+  #      - asset: assets/fonts/Dosis-Medium.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
